--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,12 @@ a {
 * {
   box-sizing: border-box;
 }
+
+@media (orientation: portrait) {
+  .logo {
+    width: 70px;
+    height: auto;
+    margin-left: -30px;
+    margin-top: -20px;
+  }
+}
